--- a/views/loginAdmin.jade
+++ b/views/loginAdmin.jade
@@ -12,10 +12,12 @@ block content
                         span.icon-bar
                 .navbar-collapse.collapse.navbar-responsive-collapse
                     ul.nav.navbar-nav
-                        li.active
-                            a(href="#") Postgrados
                         li
-                            a(href="#") UFPS
+                            a(href="/loginAdmin") Administrador
+                        li.active
+                            a(href="/login") Director
+                        li
+                            a(href="#") Docente
 
         .container
             .row
