--- a/views/director/create.jade
+++ b/views/director/create.jade
@@ -1,38 +1,99 @@
-//
-   Created by fabiancote on 7/22/14.
-
-h1 Asignar director
-h2 programa: #{programa.nombre}
--if (director == true){
-    p Este programa tiene un director asignado, si crea uno nuevo el anterior sera eliminado
--}
-
-form(method="POST", action="/director/create")
-    input(type="hidden", name="programa", value="#{programa.id}")
-
-    legend
-        | nombres del director
-        input(type="text", name="nombres", autocomplete="off", required)
-    legend
-        | apellidos del director
-        input(type="text", name="apellidos", autocomplete="off", required)
-    legend
-        | tipo de documento
-        select(name="tipodoc")
-            option(value="Cedula de ciudadania") Cedula de ciudadania
-            option(value="Pasaporte") Pasaporte
-            option(value="Cedula de Extranjeria") Cedula de Extranjeria
-    legend
-        | numero de documento
-        input(type="text", name="numdoc", autocomplete="off", required)
-    legend
-        | Email
-        input(type="email", name="email", autocomplete="off", required)
-    legend
-        | telefono
-        input(type="number", name="telefono", autocomplete="off", required)
-    input(type="submit", value="crear")
-
-a(href="/programa/#{programa.id}/view") Cancelar
-
-br
+extends ../layout
+block content
+    .navbar.navbar-inverse
+        .container
+            .navbar-header
+                a(class="navbar-brand", href="#") Sistema EspSoft
+                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+            .navbar-collapse.collapse.navbar-responsive-collapse
+                ul.nav.navbar-nav
+                    li.active
+                        a(href="#") Postgrados
+                    li
+                        a(href="#") UFPS
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        a(href="/logoutAdmin")
+                            i.fa.fa-power-off
+                            | &nbsp; Cerrar Sesion
+    .container
+        ul.breadcrumb
+            li: a(href="/director/profile") Inicio
+            li: a(href="/programa/#{programa.id}/view") Programa
+            li.active Registrar director
+        .row
+            .margin-auto
+                p.lead.text-center
+                    strong Registro de director
+                    span.text-primary: strong &nbsp; #{programa.nombre}
+                p.lead.text-center
+                    h5.text-center
+                        a(href="/programa/#{programa.id}/view").btn.btn-default.btn-xs
+                            i.fa.fa-chevron-circle-left
+                            | &nbsp; Volver al programa
+                .margin-botton
+                .well.bs-component
+                    form(method="POST", action="/director/create").form-horizontal
+                        input(type="hidden", name="programa", value="#{programa.id}")
+                        faildset
+                            legend Formulario de registro de Directores
+                            .form-group
+                                label(for="inputNombre", class="col-lg-2 control-label") Nombres
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-user
+                                        input(type="text", name="nombres", autocomplete="off", required).form-control
+                                    p.text-muted primer y segundo nombre del director.
+                            .form-group
+                                label(for="inputApellidos", class="col-lg-2 control-label") Apellidos
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-user
+                                        input(type="text", name="apellidos", autocomplete="off", required).form-control
+                                    p.text-muted Apellidos del director.
+                            .form-group
+                                label(for="inputtipo", class="col-lg-2 control-label") Tipo documento
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-bookmark
+                                        select(name="tipodoc").form-control
+                                            option(value="Cedula de ciudadania") Cedula de ciudadania
+                                            option(value="Pasaporte") Pasaporte
+                                            option(value="Cedula de Extranjeria") Cedula de Extranjeria
+                                    p.text-muted Tipo de documento identificador del director.
+                            .form-group
+                                label(for="inputdocumento", class="col-lg-2 control-label") Documento
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-bookmark
+                                        input(type="text", name="numdoc", autocomplete="off", required).form-control
+                                    p.text-muted numero de documento identificador del director.
+                            .form-group
+                                label(for="inputdocumento", class="col-lg-2 control-label") Email
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-send-o
+                                        input(type="email", name="email", autocomplete="off", required).form-control
+                                    p.text-muted direccion de correo electronico de contacto del director
+                            .form-group
+                                label(for="inputdocumento", class="col-lg-2 control-label") Telefono
+                                .col-lg-10
+                                    .input-group
+                                        span.input-group-addon
+                                            i.fa.fa-phone
+                                        input(type="number", name="telefono", autocomplete="off", required).form-control
+                                    p.text-muted direccion de correo electronico de contacto del director
+                            legend
+                            .form-group
+                                h5.text-center
+                                    button(type="submit").btn.btn-primary
+                                        i.fa.fa-plus
+                                        | &nbsp; Agregar y asignar director
