--- a/views/director/edit.jade
+++ b/views/director/edit.jade
@@ -1,28 +1,151 @@
-//
-   Created by fabiancote on 7/25/14.
-h1 Editor de Directores
+extends ../layout
+block content
+    .navbar.navbar-inverse
+        .container
+            .navbar-header
+                a(class="navbar-brand", href="#") Sistema EspSoft
+                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+            .navbar-collapse.collapse.navbar-responsive-collapse
+                ul.nav.navbar-nav
+                    li.active
+                        a(href="#") Postgrados
+                    li
+                        a(href="#") UFPS
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        a(href="/logoutAdmin")
+                            i.fa.fa-power-off
+                            | &nbsp; Cerrar Sesion
+    .container
+        ul.breadcrumb
+            li: a(href="/administrador/profile") Inicio
+            li: a(href="/programa/#{programa.id}/view") Programa
+            li.active Informacion del director
+        .row
+            .margin-auto
+                p.lead.text-center
+                    strong Informacion del director
+                    span.text-primary &nbsp; #{datos.nombres} #{datos.apellidos} -
+                    strong.text-primary &nbsp; #{programa.nombre}
+                p.lead.text-center
+                    span.text-muted &nbsp; Informacion general del director
+                h5.text-center.margin-botton
+                    a(href="/programa/#{programa.id}/view").btn.btn-default.btn-xs
+                        i.fa.fa-chevron-circle-left
+                        | &nbsp; Volver al programa
 
-form(method="PUT", action="/director/edit")
-    legend
-        | nombres del director
-        input(type="text", name="nombres", autocomplete="off", required)
-    legend
-        | apellidos del director
-        input(type="text", name="apellidos", autocomplete="off", required)
-    legend
-        | tipo de documento
-        select(name="tipodoc")
-            option(value="Cedula de ciudadania") Cedula de ciudadania
-            option(value="Pasaporte") Pasaporte
-            option(value="Cedula de Extranjeria") Cedula de Extranjeria
-    legend
-        | numero de documento
-        input(type="text", name="numdoc", autocomplete="off", required)
-    legend
-        | Email
-        input(type="email", name="email", autocomplete="off", required)
-    legend
-        | telefono
-        input(type="number", name="telefono", autocomplete="off", required)
+            .col-lg-6
+                .panel.panel-default
+                    .panel-heading
+                        h5
+                            i.fa.fa-user
+                            |&nbsp; Datos personales del director
+                    .panel-body
+                        .panel-body
+                        form(method="POST", action="/director/changepass").form-horizontal
+                            input(type="hidden", name="_method", value="PUT")
+                            input(type="hidden", name="action", value="1")
+                            input(type="hidden", name="datopersonal", value="#{datos.id}")
+                            input(type="hidden", name="director", value="#{director.id}")
+                            input(type="hidden", name="datos", value="#{datos.id}")
+                            fieldset
+                                .form-group
+                                    label(for="inputNombre", class="col-lg-2 control-label") Nombres
+                                    .col-lg-10
 
-br
+                                        .input-group
+                                            span.input-group-addon
+                                                i.fa.fa-user
+                                            input(type="text", name="nombres", value="#{datos.nombres}", required).form-control
+                                        p.lead.text-muted Nombre del estudiante
+                                .form-group
+                                    label(for="inputApellido", class="col-lg-2 control-label") Apellidos
+                                    .col-lg-10
+
+                                        .input-group
+                                            span.input-group-addon
+                                                i.fa.fa-user
+                                            input(type="text", name="apellidos", value="#{datos.apellidos}", required).form-control
+                                        p.lead.text-muted Apellidos del estudiante
+                                .form-group
+                                    label(for="inputidentidad", class="col-lg-2 control-label") Documento
+                                    .col-lg-10
+
+                                        .input-group
+                                            span.input-group-addon
+                                                i.fa.fa-bookmark
+                                            input(type="text", name="documento", value="#{datos.documento}", required).form-control
+                                        p.lead.text-muted Numero de identificacion del estudiante
+                                .form-group
+                                    label(for="inputidentidad", class="col-lg-2 control-label") Tipo documento
+                                    .col-lg-10
+
+                                        .input-group
+                                            span.input-group-addon
+                                                i.fa.fa-bookmark
+                                            select(name="tipodoc").form-control
+                                                case datos.tipo_documento
+                                                    when 'Cedula de ciudadania'
+                                                        option(value="Cedula de ciudadania", selected="true") Cedula de ciudadania
+                                                        option(value="Pasaporte") Pasaporte
+                                                        option(value="Cedula de Extranjeria") Cedula de Extranjeria
+                                                    when 'Pasaporte'
+                                                        option(value="Cedula de ciudadania") Cedula de ciudadania
+                                                        option(value="Pasaporte", selected="true") Pasaporte
+                                                        option(value="Cedula de Extranjeria") Cedula de Extranjeria
+                                                    when 'Cedula de Extranjeria'
+                                                        option(value="Cedula de ciudadania") Cedula de ciudadania
+                                                        option(value="Pasaporte") Pasaporte
+                                                        option(value="Cedula de Extranjeria", selected="true") Cedula de Extranjeria
+
+                                        p.lead.text-muted tipo de documento
+                                .form-group
+                                    label(for="inputidentidad", class="col-lg-2 control-label") Email
+                                    .col-lg-10
+
+                                        .input-group
+                                            span.input-group-addon
+                                                i.fa.fa-send-o
+                                            input(type="email", name="email", value="#{datos.email}", required).form-control
+                                        p.lead.text-muted Correo electronico de contacto del estudiante
+                                .form-group
+                                    label(for="inputidentidad", class="col-lg-2 control-label") Telefono
+                                    .col-lg-10
+
+                                        .input-group
+                                            span.input-group-addon
+                                                i.fa.fa-phone
+                                            input(type="number", name="telefono", value="#{datos.telefono}", required).form-control
+                                        p.lead.text-muted Numero telefonico de contacto
+
+
+
+                                .form-group
+                                    h5.text-center
+                                        button(type="submit").btn.btn-primary
+                                            i.fa.fa-save
+                                            | &nbsp; Guardar Cambios
+            .col-lg-6
+                .panel.panel-default
+                    .panel-heading
+                        h5
+                            i.fa.fa-user
+                            |&nbsp; Datos de administrador del director
+                    .panel-body
+                        .form-horizontal
+
+                            fieldset
+                                .form-group
+                                    label(for="inputCodigo", class="col-lg-2 control-label") Usuario
+                                    .col-lg-10
+
+                                        .input-group
+                                            h4.text-primary #{director.usuario}
+                                        p.text-muted Usuario identificador en el sistema del director
+                                        .input-group
+                                            a(href="/director/changepass/#{director.id}/#{datos.id}").btn.btn-default.btn-xs
+                                                i.fa.fa-refresh
+                                                | &nbsp; Cambiar Contraseña
