--- a/views/cohorte/selectdates.jade
+++ b/views/cohorte/selectdates.jade
@@ -90,14 +90,14 @@ block content
                                         input(type="date", name="fmatricula", required).form-control
                                     p.text-muted Seleccione la fecha estimada en la que los admitidos realicen el pago por concepto del valor total del curso de postgrado
                             .form-group
-                                label(for="inputResul", class="col-lg-2 control-label") Introduccion
+                                label(for="inputResul", class="col-lg-2 control-label") Inicio
                                 .col-lg-10
 
                                     .input-group
                                         span.input-group-addon
                                             i.fa.fa-calendar
                                         input(type="date", name="fintroduccion", required).form-control
-                                    p.text-muted Fecha estimada en la que se realizara la reunion de instroduccion al postgrado a los alumnos matriculados
+                                    p.text-muted Fecha de inicio de clases
 
                             .form-group
                                 label(for="inputResul", class="col-lg-2 control-label") Culmina
